--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "astro": "^3.1.1",
+    "astro-icon": "^0.8.1",
     "postcss": "^8.4.30",
     "postcss-preset-env": "^9.1.4"
   }
